oz/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@700&family=Orbitron:wght@900&family=Oswald&display=swap');

:root {
  /* change the values below to your colors from your palette */
  --primary-color: #CD4631  ;
  --secondary-color: #F7BF4F ;
  --accent1-color: #81ADC8;
  /* --accent2-color: #020300; */
  --accent2-color: #848C8E;

  /* change the values below to your chosen font(s) */
  --heading-font: 'Orbitron','Gemunu Libre',sans-serif;
  --paragraph-font: 'Oswald', 'Gemunu Libre' , sans-serif;

  /* these colors below should be chosen from among your palette colors above */
  --headline-color-on-white: var(--primary-color);  /* headlines on a white background */ 
  --headline-color-on-color: white; /* headlines on a colored background */ 
  --paragraph-color-on-white: #81ADC8; /* paragraph text on a white background */ 
  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
  --paragraph-background-color: #81ADC8  ;
  --nav-link-color: #020300;
  --nav-background-color: var(--secondary-color);
  --nav-hover-link-color: white;
  --nav-hover-background-color: #81ADC8;
}


nav a:hover {
    background-color: black;
    color: #d9c2a3;
}        
h3 {
  display: grid;
  grid-column: 2/2;
  grid-row: 2/2;
}

.icon {
    width: 80px;
}
   

nav a {
  display: grid;
  grid-template-columns:  auto;
    text-align: center;
    color: #fcfbfb;
    text-decoration: none;
    font-family: var(--heading-font);
    
}  

h1 {
font-size: 2.5em;
margin-block-start: 0px;
margin-block-end: 30px;
margin-inline-start: 0px;
margin-inline-end: 0px;
font-weight: bold;
}
p {
  font-size: 1.5em;
}


nav {
    background-color: var(--nav-background-color);
    line-height: 3em;
    text-align: center;
    font-size: 1.2em;
    vertical-align: middle;
  }
  nav  {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    align-content: stretch;
    flex-direction: row;
    justify-content: space-evenly;
    vertical-align: middle;
  }
  nav a {
    padding:1em;
    text-decoration: none;
    vertical-align: middle;
  }
  nav a:link, nav a:visited {
    color: var(--nav-link-color);
  }
  nav a:hover {
    color: var(--nav-hover-link-color);
    background-color: var(--nav-hover-background-color);
  }

  summary {
    font-weight: 600;
    background-color: var(--primary-color);
    padding: 1.2rem;
    margin-bottom: 1.2rem;
    border-radius: 0.5rem;
    cursor: pointer;
   }
#logo_link {
  width: 325px;
}
.logo {
  width: 100%;
  vertical-align: bottom;
  width: 325px;
}

footer {
  vertical-align: middle;
}
h6 {
 
  font-family: var(--paragraph-font);
  vertical-align: middle;

}
.social{
  padding: 1%;
  display: inline-flex;
  flex-wrap: nowrap;
  flex-direction: row;
  justify-content: center;
}

/* Home Page     */
.home-grid {
  display: grid;
  grid-template-columns: 3% 5% 5% 5% 5% 5% 5% 5% 5% 3% 40% 3%;
  grid-template-rows: .2fr 1.6fr 1.4fr .5fr .1fr;
  
  }


.button-box {
  background-color: var(--nav-background-color);
  line-height: 3em;
  text-align: center;
  font-size: 2em;
  text-decoration: none;
  padding: 1%;
  color: white;
  border-radius: 5px;
}

.solution-msg {
  grid-column: 11/11;
  grid-row: 2/2;
  max-width: 800px;
  margin: 0 auto;
}
.solution-img {
  grid-column:  2/10;
  grid-row: 2/2;
  justify-content: center;
  justify-items: center;
  text-align: center;
}
#solution-logo-img {
  width: 100%;
  max-width: 440px;
  justify-content: center;
  justify-items: center;
  text-align: center;

  box-shadow: 5px 5px 10px  var(--accent2-color);
}

.profile-msg {
  grid-column: 2/10;
  grid-row: 3/3;
  margin: 0 auto;
}
.button-box {
  grid-column: 5/5;
  grid-row: 4/4;
  width: 125px;
  height: 80px;
  font-size: 1.6em;
  background-color: var(--accent1-color);
  text-align: center;
  justify-content: center;
  font-family: var(--paragraph-font);
  transition: transform .6s;
  box-shadow: 5px 5px 10px #6f7364;
  align-items: center;
  justify-content: center;
  text-shadow: -1px 1px 2px var(--accent2-color),
  1px 1px 2px var(--accent2-color),
  1px -1px 0 var(--accent2-color),
  -1px -1px 0 var(--accent2-color);

}
.button-box:hover, .button-box2:hover {
  opacity: .6;
  transform: scale(1.1);
}

.profile-img-div {
  grid-column: 11/11;
  grid-row: 3/5;
  margin-bottom: auto;
  padding-bottom: 3.4em;
  text-align: center;
}
#profile-img {
width: 100%;
max-width: 400px;
grid-column: 4/4;
  grid-row: 3/5;
 
  text-align: center;
  box-shadow: 5px 5px 10px  var(--accent2-color);
}
h1,h3 {
  text-align: center;
  font-family: var(--heading-font);
}
p {
font-family: var(--paragraph-font);
}

a:link, a:visited {
  color: white;
  text-decoration: none;
  cursor: auto;

}
h3 {
  font-size: 3em;
  text-shadow: -1px 1px 2px white,
  1px 1px 2px white,
  1px -1px 0 white,
  -1px -1px 0 white;
}
.survey {
  margin: 2%;
  padding: 2%;
}

/* Portfolio page  */

.portfolio-grid {
  display: grid;
  grid-template-columns: 2% 43% 5% 5% 43% 2%;
  grid-template-rows:  2fr 2fr 2fr 2fr .2fr;
}
#hero {
  display: grid;
  grid-template-columns: 2fr 1fr 2fr;
  grid-template-rows: .2fr .2fr 1fr;

}
#hero-box {
  grid-column: 1/7;
  grid-row: 1/5;
}

.hero-img {
  grid-column: 1/7;
  grid-row: 1/3;
  width: 100%;
  z-index: -1;
}
#head-img {
  grid-column: 1/7;
  grid-row: 1/3;
  width: 100%;
  max-width: 2500px;
  z-index: -1;
}
/* #hero-msg {
  grid-column: 2/2;
  grid-row: 2/2;
} */

.home-title {
  grid-column: 2/2;
  grid-row: 2/2;
}


#hero-msg {
  grid-column: 1/4;
  grid-row: 2/2;
}


#hero-box {
  grid-column: 1/4;
  grid-row: 1/3;
  z-index: -1;
}
/* 
#networking-box {
  grid-column: 2/5;
  grid-row: 1/1;
} */

.networking-img-div {
  padding-block-start: 3%;
  padding-block-end: 3%;
  grid-column: 2/3;
  grid-row: 1/1;
  width: 100%;
}
#networking-img {
  
  grid-column: 2/4;
  grid-row: 5/5;
  width: 100%;
  border: 10px solid var(--accent2-color);
  box-shadow: 5px 5px 10px  var(--accent2-color);
}
/* ... */

